Fix menu z-index issue.

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -562,6 +562,7 @@ textarea {
 .main-navigation {
     clear: both;
     display: block;
+    position: relative;
     float: right;
     color: white;
     width: 100%;
